Produto e associacao muitos para muitos